sandbox/output
fizzbuzz_tests.c:6:6: error: expected identifier or '(' before numeric constant
 char*12 st16 = "1, 2, Fizz, 4, Buzz, Fizz, 7, 8, Fizz, 10, 11, Fizz, 13, 14, FizzBuzz, 16";
      ^
In file included from fizzbuzz_tests.c:2:0:
fizzbuzz_tests.c: In function 'fizzbuzzTests':
fizzbuzz_tests.c:15:37: error: 'st16' undeclared (first use in this function)
     assert (strcmp(fizzBuzzSeq(16), st16) == 0);
                                     ^
fizzbuzz_tests.c:15:37: note: each undeclared identifier is reported only once for each function it appears in
make: *** [test] Error 1
